# lang2_vm

./: CMakeLists.txt
src/: CMakeLists.txt  main.c  vm.c
